--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ h1 {
     font-size: 48px;
     text-align: center;
     grid-row: 1;
-    grid-column: 1 / span4;
+    grid-column: 1 / span 5;
 }
 
-h3 {
+h2 {
     text-align: center;
     grid-row: 2;
     grid-column: 2;
@@ -33,7 +33,8 @@ h3 {
 
 textarea {
     grid-row: 2;
-    grid-column: 3; 
+    grid-column: 3;
+    height: 50px; 
 }
 
 #red {
@@ -47,11 +48,9 @@ textarea {
 #blue {
     width:  100px;
     height: 100px;
-    background: darkblue;
-    animation-name: glowBlue;
-    animation-duration: 1s;
+    background: blue;
     grid-row: 4;
-    grid-column: 1;
+    grid-column: 2;
 }
 
 #green {
@@ -59,7 +58,7 @@ textarea {
     height: 100px;
     background: green;
     grid-row: 4;
-    grid-column: 5;
+    grid-column: 4;
 }
 
 #yellow {
@@ -69,6 +68,10 @@ textarea {
     filter: 50%;
     grid-row: 5;
     grid-column: 3;
+}
+
+.backgroundChange{
+    background: white;
 }
 
 #playButton {
