--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-@keyframes glowRed {
-    from {background-color: maroon}
-    to {background-color: red}
-}
-
-@keyframes glowBlue {
-    from {background-color: darkblue}
-    to {background-color: blue}
-}
-
-@keyframes glowYellow {
-    from {background-color: lightyellow}
-    to {background-color: yellow}
-}
-
-@keyframes glowGreen {
-    from {background-color: lightgreen}
-    to {background-color: green}
-}
-
 h1 {
     font-size: 48px;
     text-align: center;
@@ -65,23 +45,21 @@ textarea {
     width:  100px;
     height: 100px;
     background: yellow;
-    filter: 50%;
     grid-row: 5;
     grid-column: 3;
 }
 
-.backgroundChange{
-    background: white;
-}
 
 #playButton {
     grid-row: 6;
     grid-column: 1;
+    background-color: lightgray;
 }
 
 #submitButton {
     grid-row: 6;
     grid-column: 5;
+    background-color: lightgray;
 }
 
 .wrapper {
@@ -89,5 +67,9 @@ textarea {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     padding: 10px;
+}
+
+body {
+    background-color: gray;
 }
 
